# embedded-test-demo

./: CMakeLists.txt  README.md  run_tests.py
src/: temperature_controller.cpp  temperature_controller.h
tests/: test_temperature_controller.cpp
